fix load ffmpeg

--- a/angular.json
+++ b/angular.json
@@ -26,14 +26,14 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
-            "scripts": []
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.scss"],
+            "scripts": [
+              "node_modules/@ffmpeg/ffmpeg/dist/ffmpeg.min.js",
+              "node_modules/@ffmpeg/core/dist/ffmpeg-core.js",
+              "node_modules/@ffmpeg/core/dist/ffmpeg-core.wasm",
+              "node_modules/@ffmpeg/core/dist/ffmpeg-core.worker.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -70,6 +70,14 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "matchtune:build",
+            "proxyConfig": "proxy.conf.json",
+            "headers": {
+              "Cross-Origin-Opener-Policy": "same-origin",
+              "Cross-Origin-Embedder-Policy": "require-corp"
+            }
+          },
           "configurations": {
             "production": {
               "browserTarget": "matchtune:build:production"
@@ -94,13 +102,8 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon.ico",
-              "src/assets"
-            ],
-            "styles": [
-              "src/styles.scss"
-            ],
+            "assets": ["src/favicon.ico", "src/assets"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         }
